Updated gradle version tp 29 Changed all files from java to kotlin all basic functionality has not changed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.cauliflower.ready2walk.Training">
+    tools:context="com.example.cauliflower.ready2walk.Main">
 
     <FrameLayout
         android:id="@+id/content"
@@ -46,7 +46,7 @@
 
     </FrameLayout>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
