--- a/app/src/main/res/layout/fragment_sampling.xml
+++ b/app/src/main/res/layout/fragment_sampling.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.SamplingFragment">
+    tools:context="com.example.cauliflower.ready2walk.UI.SamplingFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
