--- a/app/src/main/res/layout/fragment_sampling.xml
+++ b/app/src/main/res/layout/fragment_sampling.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent">
 
         <!-- Create Save Button-->
+
         <Button
             android:id="@+id/stopButton"
             android:layout_width="wrap_content"
@@ -23,7 +24,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/startButton" />
 
         <Button
             android:id="@+id/startButton"
