--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.example.cauliflower.ready2walk.UI.HomeFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -29,7 +30,7 @@
         android:src="@drawable/ic_fitness_center_black_24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/instructionButton"
+        android:id="@+id/appInfoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
