--- a/app/src/main/res/layout/fragment_session_view.xml
+++ b/app/src/main/res/layout/fragment_session_view.xml
@@ -7,8 +7,8 @@
 
      <TextView
         android:id="@+id/dateSummary"
-        android:layout_width="149dp"
-        android:layout_height="88dp"
-        android:text="TextView" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/Sessions" />
 
 </FrameLayout>
