--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -73,6 +73,7 @@
         android:id="@+id/editText"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
+
     <TextView
         android:id="@+id/UserInfo4"
         android:layout_width="wrap_content"
@@ -97,6 +98,14 @@
         android:layout_below="@id/UserInfo3"
         android:text="Years"/>
 
+    <TextView
+        android:id="@+id/UserInfo5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/UserAge"
+        android:layout_centerHorizontal="true"
+        android:layout_marginRight="3dp"
+        android:text="Gender"/>
 
     <Button
         android:id="@+id/button"
