better graph capabilities with real time and autocorr graph # Conflicts: #	app/src/main/res/layout/fragment_sampling.xml

--- a/app/src/main/res/layout/fragment_session_view.xml
+++ b/app/src/main/res/layout/fragment_session_view.xml
@@ -8,9 +8,15 @@
      <com.jjoe64.graphview.GraphView
          android:id="@+id/sessionGraph"
          android:layout_width="match_parent"
-         android:layout_height="wrap_content"
+         android:layout_height="300dp"
+         android:layout_gravity="top"
          />
-
+     <com.jjoe64.graphview.GraphView
+         android:id="@+id/sessionAutocorrGraph"
+         android:layout_width="match_parent"
+         android:layout_height="300dp"
+         android:layout_gravity="bottom"
+         />
 
      <!--DEBUG data>
      <TextView
