--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -10,9 +10,13 @@
         android:id="@+id/UserInfo1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
         android:layout_marginRight="3dp"
-        android:text="Hello World!" />
+        android:layout_marginBottom="640dp"
+        android:text="Welcome To Ready2Walk!" />
 
     <EditText
         android:id="@+id/editText"
@@ -26,5 +30,5 @@
         android:layout_height="wrap_content"
         android:layout_alignWithParentIfMissing="false"
         android:layout_centerHorizontal="true"
-        android:text="Update Info" />
+        android:text="Introduction and Instructions" />
 </RelativeLayout>
