--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.cauliflower.ready2walk.UI.UserInfoFragment">
+    android:orientation="horizontal"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
 
 
     <TextView
@@ -70,6 +73,7 @@
         android:layout_marginRight="3dp"
         android:text="@string/user_unit3"/>
 
+    <!--User Input-->
     <EditText
         android:id="@+id/editText"
         android:layout_height="wrap_content"
@@ -125,4 +129,32 @@
         android:text="Update Info" />
     <!--android:onClick="sendMessage" -->
     <!--android:layout_below="@id/UserName" -->
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/UserGender"
+        >
+
+    <Button
+        android:id="@+id/ButtonSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_weight="1"
+        android:layout_below="@id/UserGender"
+        android:text="@string/save"/>
+
+    <Button
+        android:id="@+id/buttonCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/UserGender"
+        android:layout_marginRight="40dp"
+        android:layout_toRightOf="@id/ButtonSave"
+        android:layout_weight="1"
+        android:text="@string/cancel"/>
+    </LinearLayout>
+
 </RelativeLayout>
