--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context="com.example.cauliflower.ready2walk.UI.HomeFragment">
+    tools:context="com.example.cauliflower.ready2walk.UI.HomeFragment"
+    android:background="?attr/bgColor">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/userInfoButton"
