--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cauliflower.ready2walk.UI.UserInfoFragment">
+    tools:context="com.example.cauliflower.ready2walk.UI.UserInfoFragment"
+    android:background="?attr/bgColor">
 
 
     <TextView
-        android:id="@+id/UserInfo1"
+        android:id="@+id/Welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
@@ -16,10 +17,11 @@
         android:layout_marginTop="27dp"
         android:layout_marginRight="3dp"
         android:layout_marginBottom="640dp"
+        android:textColor="?attr/textColor"
         android:text="Welcome To Ready2Walk!" />
 
     <TextView
-        android:id="@+id/UserInfo2"
+        android:id="@+id/Disclaimer_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
@@ -31,40 +33,39 @@
         android:layout_marginEnd="328dp"
         android:layout_marginRight="3dp"
         android:layout_marginBottom="604dp"
+        android:textColor="?attr/textColor"
         android:text="Disclaimer" />
 
     <TextView
-        android:id="@+id/UserInfo3"
+        android:id="@+id/Disclaimer"
         android:layout_width="383dp"
         android:layout_height="168dp"
-        android:layout_below="@+id/editText"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="11dp"
         android:layout_marginTop="92dp"
         android:layout_marginEnd="17dp"
-        android:layout_marginRight="3dp"
         android:layout_marginBottom="426dp"
-        android:text="This application is meant to serve as an aid for rehabilitation, and not as a substitute for the instruction from a trained medical professional. Please consult the advice of a tranined medical professional, before and while you use this program. " />
+        android:textColor="?attr/textColor"
+        android:text="" />
 
     <TextView
-        android:id="@+id/UserInfo3"
+        android:id="@+id/Intro_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="9dp"
         android:layout_marginTop="209dp"
         android:layout_marginEnd="236dp"
-        android:layout_marginRight="3dp"
         android:layout_marginBottom="458dp"
+        android:textColor="?attr/textColor"
         android:text="Introduction" />
 
     <TextView
-        android:id="@+id/UserInfo4"
+        android:id="@+id/Introduction"
         android:layout_width="383dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
@@ -74,12 +75,8 @@
         android:layout_marginTop="254dp"
         android:layout_marginRight="3dp"
         android:layout_marginBottom="297dp"
-        android:text="Thank you for downloading Ready2Walk! We hope that you are able to use this application to improve your rehabilitation proccess as you become accustomed to your prosthetic device. The purpose of this application is to provide your health care team with information about your mobility while wearing the prosthetic." />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
+        android:textColor="?attr/textColor"
+        android:text=""/>
 
 
     <Button
