Made buttons larger

--- a/app/src/main/res/layout/fragment_sampling.xml
+++ b/app/src/main/res/layout/fragment_sampling.xml
@@ -22,6 +22,8 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorStop"
             android:text="@string/stop"
+            android:textSize="48dp"
+            android:padding = "40dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +35,8 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorStart"
             android:text="@string/start"
+            android:textSize="48dp"
+            android:padding = "40dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
