--- a/app/src/main/res/layout/fragment_sampling.xml
+++ b/app/src/main/res/layout/fragment_sampling.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/bgColor"
+    android:keepScreenOn="true"
     tools:context="com.example.cauliflower.ready2walk.UI.SamplingFragment">
 
     <!-- TODO: Update blank fragment layout -->
